@startuml
'https://plantuml.com/sequence-diagram

hide empty members


class LegacyDataUI {
+askFilePath
+askConfirmation
+askSort
+askData
}

class LegacyDataController {
+readInfoFromCSV(filepath)
+DateParser(date)
+sortData(data)
+loadData(path, regex)
+printLegacyDataList(List<LegacyData>)
}
class LegacyData{
-arr
 -sch
 -admin
 -leave
 -SNSnumber
 -lot
 -vaccineName
 -currentDose
 +CenterData(arrDate, arrTime, schDate, schTime, adminDate, adminTime, leaveDate, leaveTime, SNSnum, lot, vacName, currentDose)
 +toString()
 +validateSNSnumber()
 +validateCenterData()
 +validateLotNumber()
}
class LegacyDataStore{
+createLegacyData()
+createLegacyDataList(SNS number, vaccine name , ...)
+getLegacyDataList()
+setLegacyDataList(List<LegacyData>)
+saveLegacyDataList()
+addLegacyData(LegacyData)
+validateLegacyData(LegacyData)
}
interface Sort{
}

class QuickSort implements Sort {
}

class BubbleSort implements Sort{
}
class Company{
+getLegacyDataStore()
}

LegacyDataUI ..> LegacyDataController
LegacyDataController ..> Company
LegacyDataController ..> Sort
Company --> LegacyDataStore : uses
LegacyDataStore ..> LegacyData : keeps info



@enduml